# rs-memory-module-sys

./: Cargo.toml  README.md  build.rs
src/: lib.rs  memorymodule.c
