[package]
name = "memory-module-sys"
version = "0.3.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
description = "Bindings to the MemoryModule library for loading libraries from memory on Windows"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/indygreg/rs-memory-module-sys"
repository = "https://github.com/indygreg/rs-memory-module-sys.git"
keywords = ["windows"]
build = "build.rs"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["minwindef"] }

[build-dependencies]
cc = "1.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
# Docs.rs does not have a C cross compiler for windows. This cfg is set so that
# build.rs can know that it is in a docs.rs build and skip C compilation.
#
# https://github.com/rust-lang/docs.rs/issues/147#issuecomment-389544407
rustc-args = ["--cfg",  "memory_module_sys_docs_rs"]
rustdoc-args = ["--cfg", "memory_module_sys_docs_rs"]
